# elefant-tools

./: .dockerignore  AGENT-KNOWLEDGE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  context.md  docker-compose.yaml  pgbouncer.ini  plan.md  publish-packages.sh  readme.md  rust-toolchain.toml  shell.nix  task.md
.github/workflows/: ci.yml
benchmark-import-prepare/: Cargo.toml
benchmark-import-prepare/src/: main.rs
benchmarks/: import_prepare.sh  run_benchmarks.sh
benchmarks/results/: export-as-sql-inserts.md  export-as-sql.md  import-from-sql.md  sync-between-databases.md
codegen/: Cargo.toml
codegen/src/: main.rs
compare-with-tokio-postgres/: Cargo.toml  README.md
compare-with-tokio-postgres/benches/: my_benchmark.rs
compare-with-tokio-postgres/src/: main.rs
drop-all-test-databases/: Cargo.toml
drop-all-test-databases/src/: main.rs
elefant-client/: Cargo.toml
elefant-client-benchmarks/: Cargo.toml
elefant-client-benchmarks/benches/: copy_data_benchmark.rs
elefant-client-profiling/: Cargo.toml  profile.json  profile.sh
elefant-client-profiling/src/: main.rs
elefant-client/src/: error.rs  io_extensions.rs  lib.rs  message_reader.rs  message_tests.rs  message_writer.rs  messages.rs  monoio_connection.rs  postgres_client.rs  profiler.rs  test_helpers.rs  tokio_connection.rs
elefant-client/src/postgres_client/: copy.rs  data_types.rs  easy_client.rs  establish.rs  mod.rs  query.rs  statements.rs
elefant-client/src/protocol/: async_io.rs  error.rs  frontend_p_message.rs  io_extensions.rs  message_reader.rs  message_tests.rs  message_writer.rs  messages.rs  mod.rs  password.rs  postgres_connection.rs  sasl.rs
elefant-client/src/protocol/frame_reader/: decoder.rs  encoder.rs  mod.rs
elefant-client/src/types/: binary.rs  bool.rs  char.rs  collections.rs  core.rs  datetime.rs  from_sql_row.rs  json_type.rs  mod.rs  network_type.rs  nullable.rs  numbers.rs  numeric_type.rs  oid.rs  point_type.rs  standard_types.rs  text.rs  uuid_type.rs
elefant-client/tests/: test_monoio_integration.rs
elefant-gen/: Cargo.toml
elefant-gen/src/: main.rs
elefant-sync/: Cargo.toml
elefant-sync/src/: cli.rs  main.rs
elefant-test-macros/: Cargo.toml
elefant-test-macros/src/: lib.rs
elefant-tools/: Cargo.toml
elefant-tools/src/: chunk_reader.rs  copy_data.rs  ddl_query_builder.rs  error.rs  helpers.rs  lib.rs  models.rs  object_id.rs  parallel_runner.rs  postgres_client_wrapper.rs  quoting.rs  schema_importer.rs  schema_reader.rs  test_helpers.rs  whitespace_ignorant_string.rs
elefant-tools/src/models/: check_constraint.rs  column.rs  constraint.rs  database.rs  domain.rs  enumeration.rs  extension.rs  foreign_key.rs  function.rs  hypertable_compression.rs  hypertable_retention.rs  index.rs  mod.rs  postgres_thing_with_dependencies.rs  primary_key.rs  schema.rs  sequence.rs  table.rs  timescale_db_user_defined_job.rs  trigger.rs  unique_constraint.rs  view.rs
elefant-tools/src/pg_interval/: interval.rs  interval_norm.rs  mod.rs
elefant-tools/src/pg_interval/integrations/: mod.rs  rust_postgres.rs  serde.rs
elefant-tools/src/pg_interval/interval_fmt/: mod.rs  postgres.rs
elefant-tools/src/pg_interval/interval_parse/: mod.rs  parse_error.rs  postgres.rs
elefant-tools/src/schema_reader/: check_constraint.rs  check_contraint.rs  domain.rs  enumeration.rs  extension.rs  foreign_key.rs  foreign_key_column.rs  function.rs  index.rs  index_column.rs  key_column_usage.rs  mod.rs  schema.rs  sequence.rs  table.rs  table_column.rs  tests.rs  timescale_continuous_aggegate.rs  timescale_continuous_aggregate.rs  timescale_hypertable.rs  timescale_hypertable_dimension.rs  timescale_job.rs  trigger.rs  unique_constraint.rs  view.rs  view_column.rs
elefant-tools/src/schema_reader/tests/: column_types.rs  comments.rs  custom_types.rs  enums.rs  extensions.rs  foreign_keys.rs  functions.rs  indices.rs  inheritance.rs  mod.rs  partitioning.rs  respects_permissions.rs  storage_parameters.rs  timescale.rs  triggers.rs  views.rs
elefant-tools/src/storage/: data_format.rs  elefant_file.rs  mod.rs  postgres_instance.rs  sql_file.rs  table_data.rs
elefant-tools/src/storage/postgres/: connection_pool.rs  mod.rs  parallel_copy_destination.rs  parallel_copy_source.rs  postgres_instance_storage.rs  sequential_copy_destination.rs  sequential_copy_source.rs  tests.rs
elefant-tools/src/storage/sql_file/: mod.rs  tests.rs
elefant_sync/: Cargo.toml
elefant_tools/: Cargo.toml
elefant_tools/src/: models.rs  postgres_client_wrapper.rs  schema_importer.rs
src/: ddl_query_builder.rs  lib.rs  schema_reader.rs  test_helpers.rs
