[package]
name = "elefant-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
thiserror = "1.0"
uuid = { version = "1.6", features = ["fast-rng", "v4"] }
futures = "0.3"
itertools = "0.12"
indoc = "2"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1