[workspace]
resolver = "2"
members = [
    "elefant-tools",
    "elefant-sync",
    "elefant-test-macros",
    "drop-all-test-databases",
    "benchmark-import-prepare",
    "elefant-client",
    "codegen", "elefant-client-benchmarks", "elefant-client-profiling"]


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
debug = "full"
split-debuginfo = "off"
#lto = "fat"


[profile.profiling]
inherits = "release"
debug = true