[package]
name = "compare-with-tokio-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-types = "0.2"
elefant-client = { path = "../elefant-client", features = ["tokio"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }

[[bench]]
name = "my_benchmark"
harness = false