[package]
name = "drop-all-test-databases"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"], default-features = false }
elefant-tools = { path = "../elefant-tools", features = ["test_utilities"] }
anyhow = "1.0"