[package]
name = "elefant-client-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
elefant-client = { path = "../elefant-client", features = ["tokio"] }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
elefant-tools = { path = "../elefant-tools" }
bytes = "1.7"
futures = "0.3"

[[bench]]
name = "copy_data_benchmark"
harness = false
