[package]
name = "elefant-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["net", "io-util"], optional = true }
tokio-util = { version = "0.7", optional = true, default-features = false, features = ["compat"] }
rand = "0.9"
base64 = "0.22"
hmac = "0.12"
md-5 = "0.10"
sha2 = "0.10"
stringprep = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
tokio = ["dep:tokio", "dep:tokio-util"]