[package]
name = "elefant-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", optional = true }
tokio = { version = "1", default-features = false, features = ["net", "io-util"], optional = true }
tokio-util = { version = "0.7", optional = true, default-features = false, features = ["compat"] }
monoio = { version = "0.2", optional = true }
rand = "0.9"
base64 = "0.22"
hmac = "0.12"
md-5 = "0.10"
sha2 = "0.10"
stringprep = "0.1"
time = { version = "0.3", features = ["formatting", "parsing"], optional = true }
uuid = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["macros"] }

[features]
tokio = ["dep:tokio", "dep:tokio-util", "futures"]
monoio = ["dep:monoio"]
futures = ["dep:futures"]
time = ["dep:time"]
uuid = ["dep:uuid"]
json = ["dep:serde_json"]