[package]
name = "elefant-gen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"], default-features = false }
elefant-tools = { path = "../elefant-tools", version = "0.0.1" }
serde_json = "1.0"


[dev-dependencies]
elefant-test-macros = { path = "../elefant-test-macros" }
elefant-tools = { path = "../elefant-tools", features = ["test_utilities"] }