[package]
name = "elefant-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"], default-features = false }
elefant-tools = { path = "../elefant-tools" }

[dev-dependencies]
elefant-test-macros = { path = "../elefant-test-macros" }
elefant-tools = { path = "../elefant-tools", features = ["test_utilities"] }
