[package]
name = "elefant-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"], default-features = false }
elefant-tools = { path = "../elefant-tools" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"

[dev-dependencies]
elefant-test-macros = { path = "../elefant-test-macros" }
elefant-tools = { path = "../elefant-tools", features = ["test_utilities"] }

[profile.release]
debug = "full"
split-debuginfo = "off"
lto = "fat"
