[package]
name = "elefant-tools"
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/zlepper/elefant-tools"
authors = ["Zlepper"]
description = "A library for doing things like pg_dump and pg_restore, with extra features, and probably more bugs."
readme = "../readme.md"
keywords = ["pg_dump", "pg_restore", "postgres", "backup", "restore"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "fs"], default-features = false }
tokio-postgres = "0.7"
thiserror = "1.0"
itertools = "0.13"
bytes = "1.6"
futures = "0.3"
uuid = { version = "1.8", features = ["v4"] }
tar = "0.4"
ordered-float = { version = "4.2", features = ["serde"] }
tracing = { version = "0.1" , features = ["attributes"]}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
indoc = "2"
uuid = { version = "1.8", features = ["fast-rng", "v4"] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread"], default-features = false }
similar-asserts = "1.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
elefant-test-macros = { path = "../elefant-test-macros" }

[features]
test_utilities = []